tests/cases/errors/foreach_string_rejected/main.sv
module Top;
  string s = "hello";
  initial begin
    foreach (s[i]) begin
      s[i] = "x";
    end
  end
endmodule
